- Added new file choosing menu, which enables users to choose example tracks online directly instead of downloading files of test tracks. - Fixed excessive bouncing effect on multi-line lyrics. - Changed file naming of example tracks. - Improved the precess of picking background colors by ignoring colors that are too light.

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
     font-family: "SFPro", "PingFang TC", "PingFang SC", "SFProJP", "Helvetica Neue", "Arial-Unicode";
     -webkit-user-select: none;
     user-select: none;
-    --color1: rgba(232, 232, 232, 0.9);
+    /* --color1: rgba(232, 232, 232, 0.9);
     --color2: rgba(197, 197, 199, 0.9);
     --color3: rgba(255, 255, 255, 0.9);
     --color4: rgba(150, 150, 150, 0.9);
@@ -41,7 +41,7 @@
     --color2-rgba: rgba(197, 197, 199, 0);
     --color3-rgba: rgba(255, 255, 255, 0);
     --color4-rgba: rgba(150, 150, 150, 0);
-    --color5-rgba: rgba(210, 210, 210, 0);
+    --color5-rgba: rgba(210, 210, 210, 0); */
     --type-time: 0;
 }
 
@@ -206,13 +206,14 @@ p {
         /* font-size 0.75s cubic-bezier(0.25, 0.8, 0.25, 1), */
         font-weight 0.75s cubic-bezier(0.25, 0.8, 0.25, 1),
         margin-left 0.75s cubic-bezier(0.25, 0.8, 0.25, 1),
-        margin-top 0.6s cubic-bezier(.01,1.22,.97,1.12),
+        margin-top 0.6s cubic-bezier(.01,1.22,.97,1),
         margin-bottom 1s cubic-bezier(0.25, 0.8, 0.25, 1),
         transform 0.75s cubic-bezier(0.25, 0.8, 0.25, 1);
-    width: 100%;
-    font-weight: normal;
+    max-width: 80%;
+    text-align: left;
+    font-weight: bold;
     font-size: inherit;
-    margin-top: 4%;
+    margin-top: 0.4rlh;
     font-size: 36px;
     text-shadow: -1px 1px 20px #0009, 0 1px 5px #0009;
     align-self: flex-start;
@@ -231,8 +232,8 @@ p {
     margin: 5% 0;
     font-weight: bold;
     filter: none;
-    margin-top: 4%;
-    opacity: 0.9;
+    margin-top: 0.4rlh;
+    opacity: 1;
     transform: matrix(1.2, 0, 0, 1.2, 0, 0);
     background-size: 100% 100%, 100% 100%;
     transform-origin: 0px 50%;
@@ -353,6 +354,163 @@ p {
             40vmax 60vmax;
     }
 }
+
+/* Things related to file choosing menu */
+
+#choosefile_menu.hidden {
+    opacity: 0;
+    /* scale: .5; */
+    will-change: transform, opacity;
+    transform: scale(.5);
+    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
+}
+
+#choosefile_menu {
+    display: flex;
+    opacity: 1;
+    backdrop-filter: blur(20px);
+    background-color: #00000040;
+    border-radius: 10px;
+    max-width: 80%;
+    max-height: 300px;
+    min-width: 450px;
+    min-height: 200px;
+    position: fixed;
+    /* scale: 1; */
+    will-change: transform, opacity;
+    transform: scale(1);
+    transition: transform 0.3s cubic-bezier(.54,.02,.25,1.26), opacity 0.3s ease-in;
+    transform-origin: 0px 0px;
+    z-index: 501;
+}
+
+#choosefile_menu .title {
+    position: relative;
+    margin: 10px 15px;
+    top: 0;
+    left: 0;
+    background-color: #ffffff00;
+    color: #ffffffaa;
+    /* width: 50%; */
+    align-self: center;
+    text-align: left;
+    will-change: background-color padding, width;
+    transition: background-color 0.1s linear,
+                left 0.1s ease-out,
+                width 0.1s ease-out;
+    font-size: 1.3rem;
+    /* font-weight: bold; */
+}
+
+#choosefile_menu #testaudio_list {
+    background-color: #00000000;
+    width: 100%;
+    height: 90%;
+    align-self: flex-start;
+    margin: 5px 5px;
+}
+
+#choosefile_menu #testaudio_list .item {
+    position: relative;
+    top: 0;
+    left: 0;
+    background-color: #ffffff00;
+    padding: 0 5%;
+    color: #ffffff;
+    width: 90%;
+    align-self: center;
+    text-align: left;
+    will-change: background-color padding, width;
+    transition: background-color 0.1s linear,
+                left 0.1s ease-out,
+                width 0.1s ease-out;
+    font-size: 1.3rem;
+}
+
+#choosefile_menu #testaudio_list .item:hover {
+    left: 5px;
+    background-color: #ffffff50;
+    color: #ffffff;
+    /* width: calc(80% - 10px); */
+    /* padding: 0 calc(5% + 5px); */
+    will-change: background-color padding, width;
+    transition: background-color 0.1s linear,
+                left 0.1s ease-out,
+                width 0.1s ease-out;
+}
+
+#choosefile_menu #testaudio_list .item:active {
+    left: 5px;
+    background-color: #ffffffff;
+    color: #000000;
+    /* width: calc(80% - 10px); */
+    /* padding: 0 calc(5% + 5px); */
+    will-change: background-color padding, width;
+    transition: background-color 0.1s linear,
+                left 0.1s ease-out,
+                width 0.1s ease-out;
+}
+
+#choosefile_menu #testaudio_list .item.died {
+    position: relative;
+    top: 0;
+    left: 0;
+    background-color: #ffffff00;
+    padding: 0 5%;
+    color: #ffffffaa;
+    width: 90%;
+    align-self: center;
+    text-align: left;
+    will-change: background-color, padding, width;
+    transition: background-color 0.1s linear,
+                left 0.1s ease-out,
+                width 0.1s ease-out;
+    font-size: 1.3rem;
+    /* font-weight: bolder; */
+}
+
+#choosefile_menu #upload_btn {
+    width: 85%;
+    height: 95%;
+    background-color: #00000022;
+    color: #ffffff;
+    border-radius: 10px;
+    /* align-self: center; */
+    align-items: center;
+    text-align: center;
+    position: relative;
+    top: calc((100% - 95%) / 2);
+    left: calc((100% - 85%) / 2);
+    will-change: background-color, color;
+    transition: background-color 0.1s linear,
+                color 0.1s linear;
+}
+
+#choosefile_menu #upload_btn:hover {
+    background: #ffffffaa;
+    color: #000
+}
+
+#page_cover {
+    opacity: 0.2;
+    background-color: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 500;
+    transition: opacity 0.15s linear;
+}
+
+#page_cover.hidden {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    transition: opacity 0.15s linear;
+}
+
+/* Other */
 
 .noTransition, .noTransition * {
     transition: none !important;
